--- a/swapfile/map.jinja
+++ b/swapfile/map.jinja
@@ -1,15 +1,14 @@
-{% set defaults = {
-    'size' = '1024'
-    'swapfile_path' = '/swapfile'
-}, merge=salt['pillar.get']('swapfile:lookup') %}
+{% set settings = salt['grains.filter_by']({
+	'defaults': {'size': '1024', 'swapfile_path': '/swapfile'},
+}, merge=salt['pillar.get']('swapfile:lookup'), default='defaults') %}
 
 {% set conf = salt['grains.filter_by']({
-    'Debian':  {'swapfile': defaults.get('swapfile_path'),
-                'name': 'fallocate -l '+defaults.get('size')+'MB '+defaults.get('swapfile_path')+' && chmod 0600 ' + defaults.get('swapfile_path') + ' && mkswap '+defaults.get('swapfile_path'),
-                'fstab': defaults.get('swapfile_path') + ' none swap defaults 0 0',
+    'Debian':  {'swapfile': settings.get('swapfile_path'),
+                'name': 'fallocate -l '+settings.get('size')+'MB '+settings.get('swapfile_path')+' && chmod 0600 ' + settings.get('swapfile_path') + ' && mkswap '+settings.get('swapfile_path'),
+                'fstab': settings.get('swapfile_path') + ' none swap settings 0 0',
                 },
-    'FreeBSD': {'swapfile': defaults.get('swapfile_path'),
-                'name': 'dd if=/dev/zero of=' + defaults.get('swapfile_path') + ' bs=1m count='+defaults.get('size')+' && chmod 0600 ' + defaults.get('swapfile_path') + ' && swapon -aL',
-                'fstab': 'md99 none  swap  sw,file='+defaults.get('swapfile_path')+',late  0 0',
+    'FreeBSD': {'swapfile': settings.get('swapfile_path'),
+                'name': 'dd if=/dev/zero of=' + settings.get('swapfile_path') + ' bs=1m count='+settings.get('size')+' && chmod 0600 ' + settings.get('swapfile_path') + ' && swapon -aL',
+                'fstab': 'md99 none  swap  sw,file='+settings.get('swapfile_path')+',late  0 0',
                 },
 }, grain='os_family', merge=salt['pillar.get']('swapfile:lookup')) %}
